# libc

./: .gitmodules  CMakeLists.txt  README.md
Includes/: limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
Includes/sys/: cdefs.h
Sources/stdio/: printf.c  putchar.c  puts.c
Sources/stdlib/: abort.c
Sources/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
